<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">module_trade</string>
    <string name="title_activity_trade_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hint_broker_name">请输入经纪公司名字</string>
    <string name="btn_save">保存</string>
    <string name="hint_trade_acc">请输入交易账号</string>
    <string name="hint_trade_pwd">请输入密码</string>
    <string name="tv_picker_broker">选择经纪公司</string>
    <string name="tv_settlement_cancel">暂不确认</string>
    <string name="tv_confirm_settlement">确认结算单</string>
    <string name="tv_ask_price">卖价</string>
    <string name="tv_ask_volume">卖量</string>
    <string name="tv_now_volume">现手</string>
    <string name="tv_bid_price">买价</string>
    <string name="tv_bid_volume">买量</string>
    <string name="tv_transaction_ins">交易合约</string>
    <string name="tv_price">价格</string>
    <string name="menu_order">委托</string>
    <string name="menu_trade">成交</string>
    <string name="tv_today_balance">今权益</string>
    <string name="tv_with_draw_quota">今可取</string>
    <string name="tv_available">今可用</string>
    <string name="tv_profits">盈亏</string>
    <string name="tv_pos_profit">未结盈亏</string>
    <string name="tv_margin">保证金</string>
    <string name="tv_frozen_margin">冻结保证金</string>
    <string name="tv_with_draw_money">出金</string>
    <string name="tv_deposit">入金</string>
    <string name="tv_commission">手续费</string>
    <string name="tv_frozen_commission">冻结手续费</string>
    <string name="tv_pre_fund_mortgage_in">昨货币质入</string>
    <string name="tv_pre_fund_mortgage_out">昨货币质出</string>
    <string name="tv_fund_mortgage_in">今货币质入</string>
    <string name="tv_fund_mortgage_out">今货币质出</string>
    <string name="tv_fund_mortgage_available">质押余额</string>
    <string name="tv_mortgageable_fund">质押余额</string>
    <string name="tv_spec_product_margin">特殊产品保证金</string>
    <string name="tv_spec_product_frozen_margin">特殊产品冻结保证金</string>
    <string name="tv_spec_product_commission">特殊产品手续费</string>
    <string name="tv_spec_product_frozen_commission">特殊产品冻结手续费</string>
    <string name="tv_spec_product_position_profit">特殊产品持仓盈亏</string>
    <string name="tv_spec_product_close_profit">特殊产品平仓盈亏</string>
    <string name="tv_refresh">刷新</string>
    <string name="tv_account_info" formatted="false">%1s(%2s)</string>
    <string name="notice_not_login">您还未登录交易账号，请登录</string>
    <string name="notice_no_instrument">请选择交易合约</string>
    <string name="notice_price_error">请输入正确的价格</string>
    <string name="notice_price_less_than_lower_limit">委托价格不能低于跌停价</string>
    <string name="notice_price_great_than_lower_limit">委托价格不能超过跌停价</string>
    <string name="notice_market_price_fail">非上期\能源市价单价格必须为0</string>
    <string name="notice_volume_error">请输入正确的手数</string>
    <string name="notice_volume_gt_available" formatted="false">平仓手数大于可用[%d > %d]</string>
    <string name="tv_order_insert_notice">下单/改单操作确认</string>
    <string name="tv_order_action_notice">反手/平仓/撤单操作确认</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_ensure">确定</string>
    <string name="trade_ins_name">合约名称</string>
    <string name="trade_pos_dir">多空</string>
    <string name="trade_pos_vol">手数</string>
    <string name="trade_pos_available">可用</string>
    <string name="trade_pos_profit">逐日盈亏</string>
    <string name="trade_pos_cost">持仓均价</string>
    <string name="trade_open_profit">开仓盈亏</string>
    <string name="trade_open_cost">开仓均价</string>
    <string name="trade_pos_today">今仓</string>
    <string name="trade_pos_yesterday">昨仓</string>
    <string name="trade_pos_spec">投机</string>
    <string name="trade_pos_hedge">套保</string>
    <string name="trade_order_offset">开平</string>
    <string name="trade_order_price">委托价</string>
    <string name="trade_order_vol">委托量</string>
    <string name="trade_order_dir">买卖</string>
    <string name="trade_order_with_draw">挂单量</string>
    <string name="trade_hedge_type">投保</string>
    <string name="trade_order_status">委托状态</string>
    <string name="trade_order_trade_vol">成交量</string>
    <string name="trade_order_time">委托时间</string>
    <string name="trade_order_status_msg">状态信息</string>
    <string name="trade_order_trade_price">成交价</string>
    <string name="trade_order_trade_time">成交时间</string>
    <string name="trade_check_out">登出</string>
    <string name="trade_system_notice">系统提示</string>
    <string name="trade_check_out_msg">是否要退出交易账号</string>
    <string-array name="tab_trans">
        <item>持仓</item>
        <item>挂单</item>
        <item>委托</item>
        <item>成交</item>
    </string-array>
</resources>
