<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/abc_dp_40"
    android:background="?android:attr/selectableItemBackground"
    android:overScrollMode="never"
    android:scrollbars="none">
    <LinearLayout
        android:divider="@drawable/divider_horizontal"
        android:showDividers="middle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_ins_name"
            android:layout_width="@dimen/abc_dp_80"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/dark_deep"
            android:textSize="@dimen/abc_sp_14"
            android:text="@string/trade_ins_name"
            />
        <TextView
            android:id="@+id/tv_direct"
            android:layout_width="@dimen/abc_dp_50"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/dark_deep"
            android:textSize="@dimen/abc_sp_14"
            android:text="@string/trade_order_dir"
            />
        <TextView
            android:id="@+id/tv_offset"
            android:layout_width="@dimen/abc_dp_50"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/dark_deep"
            android:textSize="@dimen/abc_sp_14"
            android:text="@string/trade_order_offset"
            />
        <TextView
            android:id="@+id/tv_status"
            android:layout_width="@dimen/abc_dp_80"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/dark_deep"
            android:textSize="@dimen/abc_sp_14"
            android:text="@string/trade_order_status"
            />
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="@dimen/abc_dp_60"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/dark_deep"
            android:textSize="@dimen/abc_sp_14"
            android:text="@string/trade_order_price"
            />
        <TextView
            android:id="@+id/tv_volume"
            android:layout_width="@dimen/abc_dp_60"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/dark_deep"
            android:textSize="@dimen/abc_sp_14"
            android:text="@string/trade_order_vol"
            />
        <TextView
            android:id="@+id/tv_trade_volume"
            android:layout_width="@dimen/abc_dp_60"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/dark_deep"
            android:textSize="@dimen/abc_sp_14"
            android:text="@string/trade_order_trade_vol"
            />
        <TextView
            android:id="@+id/tv_with_draw"
            android:layout_width="@dimen/abc_dp_60"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/dark_deep"
            android:textSize="@dimen/abc_sp_14"
            android:text="@string/trade_order_with_draw"
            />
        <TextView
            android:id="@+id/tv_time"
            android:layout_width="@dimen/abc_dp_60"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/dark_deep"
            android:textSize="@dimen/abc_sp_14"
            android:text="@string/trade_order_time"
            />
        <TextView
            android:id="@+id/tv_hedge"
            android:layout_width="@dimen/abc_dp_40"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/dark_deep"
            android:textSize="@dimen/abc_sp_14"
            android:text="@string/trade_hedge_type"
            />
        <TextView
            android:id="@+id/tv_smsg"
            android:layout_width="@dimen/abc_dp_180"
            android:layout_height="match_parent"
            android:textColor="@color/dark_deep"
            android:textSize="@dimen/abc_sp_14"
            android:gravity="center"
            android:text="@string/trade_order_status_msg"
            />
    </LinearLayout>
</HorizontalScrollView>
