<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:divider="@drawable/divider_horizontal"
    android:showDividers="middle"
    android:layout_height="@dimen/abc_dp_40">
    <TextView
        android:id="@+id/tv_ins_name"
        android:layout_width="0dp"
        android:layout_weight="1.4"
        android:layout_height="match_parent"
        android:textColor="@color/dark_deep"
        android:textSize="@dimen/abc_sp_14"
        android:gravity="center"
        android:text="@string/trade_ins_name"
        />
    <TextView
        android:id="@+id/tv_direct"
        android:layout_width="0dp"
        android:layout_weight=".8"
        android:layout_height="match_parent"
        android:textColor="@color/dark_deep"
        android:textSize="@dimen/abc_sp_14"
        android:gravity="center"
        android:text="@string/trade_order_dir"
        />
    <TextView
        android:id="@+id/tv_offset"
        android:layout_width="0dp"
        android:layout_weight=".8"
        android:layout_height="match_parent"
        android:textColor="@color/dark_deep"
        android:textSize="@dimen/abc_sp_14"
        android:gravity="center"
        android:text="@string/trade_order_dir"
        />
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:textColor="@color/dark_deep"
        android:textSize="@dimen/abc_sp_14"
        android:gravity="center"
        android:text="@string/trade_order_trade_price"
        />
    <TextView
        android:id="@+id/tv_volume"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:textColor="@color/dark_deep"
        android:textSize="@dimen/abc_sp_14"
        android:gravity="center"
        android:text="@string/trade_order_trade_vol"
        />
    <TextView
        android:id="@+id/tv_hedge"
        android:layout_width="0dp"
        android:layout_weight=".8"
        android:layout_height="match_parent"
        android:textColor="@color/dark_deep"
        android:textSize="@dimen/abc_sp_14"
        android:gravity="center"
        android:text="@string/trade_hedge_type"
        />
    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_weight="1.2"
        android:layout_height="match_parent"
        android:textColor="@color/dark_deep"
        android:textSize="@dimen/abc_sp_14"
        android:gravity="center"
        android:text="@string/trade_order_trade_time"
        />
</LinearLayout>