<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/abc_dp_16"
        android:text="@string/tv_order_insert_notice"
        android:textColor="@color/dark_deep"
        android:textSize="@dimen/abc_sp_16"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_sp_14"
        android:textColor="@color/dark_light"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="@dimen/abc_dp_20"
        android:text="开仓1收"
        />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="@dimen/abc_dp_80"
        android:layout_height="@dimen/abc_dp_40"
        android:text="@string/tv_cancel"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message"
        android:layout_marginBottom="@dimen/abc_dp_30"
        android:layout_marginTop="@dimen/abc_dp_40"
        app:layout_constraintRight_toLeftOf="@id/btn_insert"
        />

    <TextView
        android:id="@+id/btn_insert"
        android:layout_width="@dimen/abc_dp_80"
        android:layout_height="@dimen/abc_dp_40"
        android:text="@string/tv_ensure"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="@id/btn_cancel"
        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_cancel"
        />
</androidx.constraintlayout.widget.ConstraintLayout>