<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/abc_dp_16"
    android:paddingTop="@dimen/abc_dp_16"
    android:paddingRight="@dimen/abc_dp_16"
    android:paddingBottom="@dimen/abc_dp_16"
    android:fitsSystemWindows="true"
    tools:context=".ui.login.TradeLoginActivity">

    <TextView
        android:id="@+id/broker_spinner"
        android:layout_width="0dp"
        android:layout_height="@dimen/abc_dp_40"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iv_add_spinner"
        android:paddingLeft="@dimen/abc_dp_20"
        android:drawableRight="@drawable/ic_arrow_down"
        android:gravity="end|center_vertical"
        tools:text="上期技术"
        android:textSize="@dimen/abc_sp_16"
        android:textColor="@color/dark_deep"
        />
    <ImageView
        android:id="@+id/iv_add_spinner"
        android:layout_width="@dimen/abc_dp_30"
        android:layout_height="@dimen/abc_dp_30"
        app:layout_constraintLeft_toRightOf="@id/broker_spinner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/broker_spinner"
        app:layout_constraintBottom_toBottomOf="@id/broker_spinner"
        android:src="@android:drawable/ic_input_add"
        android:layout_marginLeft="@dimen/abc_dp_5"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_trade_acc"
        android:inputType="numberSigned"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/broker_spinner"
        android:layout_marginTop="@dimen/abc_dp_40"
        android:layout_marginLeft="@dimen/abc_dp_20"
        android:layout_marginRight="@dimen/abc_dp_20"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_trade_pwd"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toLeftOf="@id/username"
        app:layout_constraintRight_toRightOf="@id/username"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:layout_marginTop="@dimen/abc_dp_5"
        />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>